--- a/estilo.css
+++ b/estilo.css
@@ -144,13 +144,13 @@
             border-radius: 50%;
             bottom: 20px;
             right: 15px;
-            padding: 25px;
+            padding: 10px;
             transition: ease 0.3s;
             animation: efecto 1.2s infinite;
         }
         
         .container-boton:hover{
-            transform: scale(1.1);
+            transform: scale(1.);
             transition: 0.3s;
         }
         
@@ -245,7 +245,7 @@
             background-color: #ff5080;
             color: #fff;
         }
-        /* *********************/
+        
         /* seccion S E R V I C I O S */
         /* *********************/
         
