--- a/estilo.css
+++ b/estilo.css
@@ -172,7 +172,7 @@
         /* *********************/
         
         #sobremi {
-            max-width: 1100px;
+            max-width: 100%;
             margin: auto;
             padding: 100px 15px;
             color: #111135;
@@ -324,7 +324,7 @@
         /* *********************/
         
         .contenedor-skills {
-            background: linear-gradient( #eb5a5acc, rgba(33, 16, 16, 0.8)), url("img/fondo-skills.jpg");
+            background: linear-gradient( #5a64ebcc, rgba(33, 16, 16, 0.8)), url("img/fondo-skills.jpg");
             background-attachment: fixed;
             background-repeat: no-repeat;
             background-size: cover;
